@@ -5,7 +5,8 @@ version 0.59
 	* Squashed a bug in buddy right-click menu handling
 	  that crashed Gaim.  In the process: found and
 	  eliminated some memory leaks.
-	
+	* Fixed a significant applet leak
+
 version 0.58 (05/13/2002):
 	* Bulgarian translation added (Thanks, Igel Itzo)
 	* Taiwanese translation added (Thanks, Paladin Liu)
